# V1.1.7
# 2021-01-27
Updated packaged

# V1.1.6
# 2021-01-27
Remove the crontab file on startup instead of happend to the existing file. 

# V1.1.5
# 2021-01-17
Updated Ubuntu base image
Updated Google Cloud SDK installation

# V1.1.4
# 2020-11-22
Fixed an issue with TimeZone not working properly

# V1.1.3
# 2020-11-22
Used a specific tag for the Ubuntu image for a better stability in the future
Added a cleanup phase to remove unused packages

# V1.1.2
# 2020-11-21
Fixed env for home in cron and default GCSOPTIONS value

# V1.1.1
# 2020-11-21
Fixed default value for GCSOPTIONS

# V1.1
# 2020-11-21
Fixed permissions for image entrypoint

# V1.0
# 2020-11-21
Initial Release
