@@ -1,6 +1,7 @@
 # V1.1.7
 # 2021-01-27
 Updated packaged
+Fixed issue with TimeZone
 
 # V1.1.6
 # 2021-01-27
